--- a/Sources/Supporting Files/Info.plist
+++ b/Sources/Supporting Files/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>0.1</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>2</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 miximka. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
