--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: swift
 osx_image: xcode9.2
-xcode_project: "MimeParser.xcodeproj"
-xcode_scheme: "MimeParserTests macOS"
+
+script:
+- xcodebuild test -scheme "MimeParser macOS"
