--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -8,10 +8,6 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-    
-uses: swift-actions/setup-swift@v1
-  with:
-    swift-version: "5.7.0"
 
 jobs:
   build:
@@ -19,6 +15,10 @@ jobs:
     runs-on: macos-latest
 
     steps:
+        
+    - uses: swift-actions/setup-swift@v1
+      with:
+        swift-version: "5.7.0"
     - uses: actions/checkout@v3
     - name: Resolve dependencies
       run: swift package resolve 
